--- a/LongplayWeb/Views/Category/Index.cshtml
+++ b/LongplayWeb/Views/Category/Index.cshtml
@@ -42,7 +42,8 @@
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"> <i class="bi bi-pencil-square"></i> Edit</a>
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-4"> <i class="bi bi-pencil-square"></i> Edit</a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-4"> <i class="bi bi-trash-fill"></i> Delete</a>
                     </div>
                 </td>
             </tr>
