--- a/LongplayWeb/Views/Shared/_Notification.cshtml
+++ b/LongplayWeb/Views/Shared/_Notification.cshtml
@@ -1,9 +1,17 @@
 ﻿@if (TempData["success"] is not null)
 {
-    <h2>@TempData["success"]</h2>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script type="text/javascript">
+        toastr.success('@TempData["success"]');
+    </script>
 }
 
 @if (TempData["error"] is not null)
 {
-    <h2>@TempData["error"]</h2>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script type="text/javascript">
+        toastr.error('@TempData["error"]');
+    </script>
 }
