Add Product model

--- a/LongplayWeb/Areas/Admin/Views/Format/Edit.cshtml
+++ b/LongplayWeb/Areas/Admin/Views/Format/Edit.cshtml
@@ -1,9 +1,9 @@
-﻿@model CoverType
+﻿@model Format
 
-<form method="post">
+<form method="post" asp-action="Edit">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Cover Type</h2>
+            <h2 class="text-primary">Edit Format</h2>
             <hr />
         </div>
         <div class="mb-3">
@@ -11,8 +11,8 @@
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-        <a asp-controller="CoverType" asp-action="Index" class="btn btn-secondary" style="width:150px">
+        <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
+        <a asp-controller="Format" asp-action="Index" class="btn btn-secondary" style="width:150px">
             Back to List
         </a>
     </div>
