--- a/LongplayWeb/Areas/Admin/Views/Format/Delete.cshtml
+++ b/LongplayWeb/Areas/Admin/Views/Format/Delete.cshtml
@@ -1,10 +1,10 @@
-﻿@model CoverType
+﻿@model Format
 
 <form method="post" asp-action="Delete">
     <input asp-for="Id" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Edit Cover Type</h2>
+            <h2 class="text-primary">Delete Format</h2>
             <hr />
         </div>
         <div class="mb-3">
@@ -12,7 +12,7 @@
             <input asp-for="Name" disabled class="form-control" />
         </div>
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="CoverType" asp-action="Index" class="btn btn-secondary" style="width:150px">
+        <a asp-controller="Format" asp-action="Index" class="btn btn-secondary" style="width:150px">
             Back to List
         </a>
     </div>
