--- a/LongplayWeb/Areas/Admin/Views/Format/Index.cshtml
+++ b/LongplayWeb/Areas/Admin/Views/Format/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CoverType>
+﻿@model IEnumerable<Format>
 @{
     ViewData["Title"] = "Index";
 }
@@ -6,11 +6,11 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Cover Type List</h2>
+            <h2 class="text-primary">Format List</h2>
         </div>
         <div class="col-6 text-end">
-           <a asp-controller="CoverType" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> &nbsp; Create New Cover Type
+            <a asp-controller="Format" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-plus-circle"></i> &nbsp; Create New Format
            </a>
         </div>
     </div>
@@ -22,7 +22,7 @@
     <thead>
         <tr>
             <th>
-                Cover Type Name
+                Format Name
             </th>
             <th></th>
         </tr>
@@ -36,8 +36,8 @@
                 </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="CoverType" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-4"> <i class="bi bi-pencil-square"></i> Edit</a>
-                        <a asp-controller="CoverType" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-4"> <i class="bi bi-trash-fill"></i> Delete</a>
+                        <a asp-controller="Format" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-4"> <i class="bi bi-pencil-square"></i> Edit</a>
+                        <a asp-controller="Format" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-4"> <i class="bi bi-trash-fill"></i> Delete</a>
                     </div>
                 </td>
             </tr>
