--- a/LongplayWeb/Views/Shared/_Layout.cshtml
+++ b/LongplayWeb/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Type</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Format" asp-action="Index">Format</a>
                                 <div class="dropdown-divider"></div>
                             </div>
                         </li>
